--- a/src/app/components/chat/chat-message/broadcast-message/broadcast-message.component.html
+++ b/src/app/components/chat/chat-message/broadcast-message/broadcast-message.component.html
@@ -6,7 +6,9 @@
      [class.alert-secondary]="!chatService.isCurrentUser(message.sender)"
      [class.float-left]="!chatService.isCurrentUser(message.sender)">
   <div mat-line class="w-100 ml-auto mr-auto text-center" *ngIf="!chatService.isCurrentUser(message.sender)">
-    <b>{{message.sender.name}}</b>
+    <b>{{message.sender.name}}</b>&nbsp;&nbsp;
+    <i *ngIf="isHappy()" class="far fa-laugh-beam" ></i>
+    <i *ngIf="!isHappy()" class="far fa-sad-cry"></i>
   </div>
   <div mat-line>
     <span>
@@ -15,6 +17,7 @@
     <app-message-attachments *ngIf="message.attachments.length > 0" [message]="message"></app-message-attachments>
   </div>
   <div mat-line  style="font-size: 10px">
-    <span class="pl-5 float-right justify-content-end"> {{message.timeStamp | date:'medium'}} </span>
+    <span class="pl-5 float-right justify-content-end"> {{message.timeStamp | date:'medium'}}
+    </span>
   </div>
 </div>
