--- a/src/app/components/chat/chat-message/private-message/private-message.component.html
+++ b/src/app/components/chat/chat-message/private-message/private-message.component.html
@@ -6,7 +6,10 @@
      [class.alert-secondary]="!chatService.isCurrentUser(message.sender)"
      [class.float-left]="!chatService.isCurrentUser(message.sender)">
   <div mat-line class="w-100 ml-auto mr-auto text-center" *ngIf="!chatService.isCurrentUser(message.sender)">
-    <b>{{message.sender.name}}</b>
+    <b>{{message.sender.name}}</b>>&nbsp;&nbsp;
+    <i *ngIf="isHappy()" class="far fa-laugh-beam" ></i>
+    <i *ngIf="!isHappy()" class="far fa-sad-cry"></i>
+    {{message.mood}}
   </div>
   <div mat-line>
     <span>
