--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-title>
-    Login
+    Register a new User
   </mat-card-title>
   <mat-card-content>
     <form (ngSubmit)="onSubmit()">
@@ -33,7 +33,7 @@
           </span>
       </div>
       <div class="row">
-        <button mat-raised-button type="submit" color="primary" class="ml-auto mr-auto justify-content-center w-25"> Login  </button>
+        <button mat-raised-button type="submit" color="primary" class="ml-auto mr-auto justify-content-center w-25"> Register  </button>
       </div>
     </form>
   </mat-card-content>
