reworked tone analyzer

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -11,6 +11,7 @@
             perm_identity
           </mat-icon>
           {{user.name}}
+          <i class="{{getMoodIconClass(user)}}"></i>
         </p>
       </mat-list-item>
     </mat-list>
