--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>
     <form (ngSubmit)="onSubmit()">
       <div class="row" style="margin-bottom: 8%;">
-        <button mat-icon-button [disableRipple]="true" class="ml-auto mr-auto justify-content-center" (click)="fileInput.click()">
+        <button mat-icon-button type="button" [disableRipple]="true" class="ml-auto mr-auto justify-content-center" (click)="fileInput.click()">
           <avatar class="" *ngIf="!file" [name]="username" [displayType]="'circle'" [size]="100"></avatar>
           <img *ngIf="file" [src]="imgSrc" alt="Profile Image" style="border-radius: 50%; outline: none !important;" width="100" height="100" />
         </button>
