--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -40,6 +40,9 @@
           </span>
       </div>
       <div class="row">
+        <app-language-picker></app-language-picker>
+      </div>
+      <div class="row">
         <button mat-raised-button type="submit" color="primary" class="ml-auto mr-auto justify-content-center w-25"> Register  </button>
       </div>
     </form>
