working language picker

--- a/src/app/components/language-picker/language-picker.component.html
+++ b/src/app/components/language-picker/language-picker.component.html
@@ -1,6 +1,14 @@
-<mat-select>
-  <mat-option *ngFor="let lang of languages" [(ngModel)]="language" (onSelectionChange)="onSelectionChange()">
-    <span class="flag-icon flag-icon-{{lang}}"></span>
-    {{lang}}
-  </mat-option>
-</mat-select>
+<div class="row">
+  <div class="col-2">
+    <span class="{{getLanguageIconClass(language)}}" (click)="langSelect.toggle()"></span>
+  </div>
+  <div class="col-10">
+    <mat-select #langSelect [(ngModel)]="language" placeholder="Language" (selectionChange)="onSelectionChange($event)">
+      <mat-option *ngFor="let lang of languages" [value]="lang">
+        <span class="{{getLanguageIconClass(lang)}}"></span>
+        {{lang.name}}
+      </mat-option>
+    </mat-select>
+  </div>
+</div>
+
