--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,10 @@
         </button>
         <span class="ml-2 justify-content-between float-left">Chat App</span>
         </div>
-        <div class="col-2">
+        <div class="col-1">
+          <app-language-picker class="w-100"></app-language-picker>
+        </div>
+        <div class="col-1">
           <button mat-flat-button *ngIf="chatService.LoggedIn" (click)="logout()">Logout</button>
           <button mat-flat-button *ngIf="!chatService.LoggedIn && chatService.Connected" (click)="switchServer()">Switch Server</button>
           <i *ngIf="!chatService.Connected" class="text-danger fas fa-plug"></i>
