--- a/src/app/components/chat/chat-message/server-message/server-message.component.html
+++ b/src/app/components/chat/chat-message/server-message/server-message.component.html
@@ -1,4 +1,4 @@
-<div 
+<div
     class="alert alert-primary justify-content-center ml-auto mr-auto w-25"
     style="min-width: 20%; max-width: 50%"
   >
@@ -6,8 +6,11 @@
     <b>{{message.sender.name}}</b>
   </div>
   <div mat-line>
-    <span>
+    <span *ngIf="!message.showTranslated || !message.translatedContent || message.translatedContent.length == 0">
       {{message.content}}
+    </span>
+    <span *ngIf="message.showTranslated && message.translatedContent &&  message.translatedContent.length > 0">
+      {{message.translatedContent}}
     </span>
     <app-message-attachments *ngIf="message.attachments.length > 0" [message]="message"></app-message-attachments>
   </div>
