--- a/src/app/components/language-picker/language-picker.component.html
+++ b/src/app/components/language-picker/language-picker.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-10">
     <mat-select #langSelect [(ngModel)]="language" placeholder="Language" (selectionChange)="onSelectionChange($event)">
-      <mat-option *ngFor="let lang of languages" [value]="lang">
+      <mat-option *ngFor="let lang of Languages" [value]="lang">
         <span class="{{getLanguageIconClass(lang)}}"></span>
         {{lang.name}}
       </mat-option>
