--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-      <div *ngIf="!chatService.Connected && !chatService.Connecting" class="container-fluid row mt-2">
+      <div *ngIf="!chatService.Connected && !chatService.LoggedIn" class="container-fluid row mt-2">
         <div class="container">
           <app-connect></app-connect>
         </div>
